Clang can't compile Optional<GPRTemporary> since r278035 because GPRTemporary has non-const copy constructor https://bugs.webkit.org/show_bug.cgi?id=226251

Reviewed by Chris Dumez.

WinCairo clang-cl builds reported a compilation error since r278035.
> include\optional(95,5): error: the parameter for this explicitly-defaulted copy constructor is const, but a member or base requires it to be non-const

* dfg/DFGSpeculativeJIT.h: Deleted the const copy ctor instead of the non-const copy ctor.


Canonical link: https://commits.webkit.org/238152@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278073 268f45cc-cd09-0410-ab3c-d52691b4dbfc